--- a/econ101.html
+++ b/econ101.html
@@ -188,10 +188,17 @@
                     <li>
                         When do choices made in the pursuit of <span class="key">self-interest</span> also promote the <span class="key">social interest</span>?
                     </li>
-                </ol>
+                </ol>    
                 <br>
                 <p>
+                    <span class="key">Goods</span>: physical objects such as laptops and cellphones<br>
+                    <span class="key">Services</span>: tasks performed for people such as internet cervice and cellphone service<br>
+                    <br>
+                    <span class="key">What?</span><br>
+                    <i>What</i> we produce varies across countries and changes over time.<br>
+                    <br>
                     <span class="key">How?</span><br>
+                    <i>How</i> we produce is described by the technologies and resources that we use.<br>
                     Goods and services are produced by using productive resources that economists call <span class="key">factors of production</span>.<br> 
                     <br>
                     Factors of production are grouped into four categories:<br>
@@ -218,6 +225,9 @@
                             <li>
                                 the knowledge and skill that people obtain from education, on-the-job training, and work experience are called <span class="key">human capital</span>
                             </li>
+                            <li>
+                                money, stocks, and bonds are called <span class="key">financial cpaital</span>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -243,7 +253,7 @@
                 <br>
                 <p>
                     <span class="key">For Whom?</span><br>
-                    Who gets the goods and services depends on the incomes that people earn.<br>
+                    <i>Who</i> gets the goods and services depends on the incomes that people earn.<br>
                 </p>
                 <ul>
                     <li>Land earns <span class="key">rent</span>.</li>
@@ -270,6 +280,12 @@
                     <li>Do the goods and services go to those who should get them?</li>
                 </ul>
                 <p>
+                    <span class="key">Self-Interest</span>: the choice is the best one available for you<br>
+                    <br>
+                    <span class="key">Social Interest</span>: the choice is the best for society as a whole<br>
+                    <br>
+                    <span class="key">Efficient</span>: it in is <i>not</i> possible to make someone better without making some else worse, then the resource use is efficient; otherwise, not efficient<br>
+                    <br>
                     <span class="key">Expropriation of Private Property</span><br>
                     This happens when the government takes private property for public purpose.<br>
                     For example, the government wants to take the private land for building a road.<br>
@@ -279,8 +295,17 @@
                     Of course, the owner may have his/her own personal reason for not selling the land.<br>
                     The government may force to take the land because of social interest.<br>
                     Is this fair? Is it in the social interest?<br>
-                    This is why not everyone agree with social interest.<br>
+                    This is why not everyone agree with all social interest.<br>
+                    <br>
+                    It is hard to answer the questions about the social interest. Today, social interest forces on four different issues:<br>
                 </p>
+                <ul>
+                    <li><span class="key">Globalizaion</span>: the expansion of international trade, borrowing and lending, and investment</li>
+                    <li><span class="key">Information-Age Monopolie</span>: the technological change of the past 40 years has been called the <i>Information Revoluion</i></li>
+                    <li><span class="key">Climate Change</span></li>
+                    <li><span class="key">Economic Instability</span></li>
+                </ul>
+                
                 <br>
                 <b>The Economic Way of Thinking</b>
                 <ul>
@@ -307,6 +332,12 @@
                 </p>
                 <br>
                 <ul>
+                    <li>
+                        <span class="key">Opportunity Cost</span>
+                        <ul>
+                            <li>the highest-valued alternative that must be given up for getting something</li>
+                        </ul>
+                    </li>
                     <li>
                         <span class="key">Rational Choice</span>
                         <ul>
