--- a/cs230.html
+++ b/cs230.html
@@ -2681,7 +2681,7 @@
                     <br>
                     Example:
                 </p>
-                <img src="./image/cs230/lec7/7_1.PNG">
+                <img src="./image/cs230/lec7/7_1.png">
                 <br>
                 <p>
                     Stacks are a very convenient way of representing/using our memory.<br>
@@ -2704,7 +2704,7 @@
                         <span class="cline">02&nbsp;&nbsp;</span>sw&nbsp;&nbsp;&nbsp;$31, 0($30)<br>
                     </code></pre>
                 </span>
-                <img src="./image/cs230/lec7/7_2.PNG">
+                <img src="./image/cs230/lec7/7_2.png">
                 <p>
                     The value of $31 at the time it was stored.<br>
                     <br>
